
Package: PSCBS
==============

Version: 0.27.3 [2012-07-10]
o DOCUMENTATION: Minor updates to the Paired PSCBS vignettes.


Version: 0.27.2 [2012-07-08]
o Updated package dependencies.


Version: 0.27.1 [2012-07-02]
o Now we refer to "copy neutral" segments as "neutral TCN" segments
  with acronym 'NTCN'.  The corresponding column in the segmentation
  results are labeled correspondingly.  The Paired PSCBS vignette 
  was updated accordingly.


Version: 0.27.0 [2012-06-24]
o (An update that should be ignored)
o DOCUMENTATION: Some grammar corrections of the 'Paired PSCBS' vignette.


Version: 0.26.1 [2012-06-05]
o Now segmentByCBS() for data frame:s does a better job identifying
  the CN signals.


Version: 0.26.0 [2012-06-03]
o DOCUMENTATION: Added details to the Paired PSCBS vignette on how
  to call segments that are copy neutral (typically diploid).
o Now argument 'delta' for callCopyNeutralByTCNofAB() of PairedPSCBS
  is calculated via estimateDeltaCN(), which estimates the width
  of the acceptance regions, used for calling copy neutral states,
  to be a function of the normal contamination.


Version: 0.25.3 [2012-06-03]
o BUG FIX: all.equal(target, current) for CBS objects would give an
  error if either 'target' or 'current' had zero segments.


Version: 0.25.2 [2012-05-30]
o Added writeSegments() for DNAcopy objects.
o BUG FIX: as.CNA() for DNAcopy added incorrect chromosome splitters.
o BUG FIX: as.CNA() for DNAcopy would ignore argument 'sample' and
  always return the first sample.


Version: 0.25.1 [2012-05-30]
o DOCUMENTATION: Added details to the Paired PSCBS vignette on how
  to tune the various callers.
o Now callROH() records parameter 'deltaROH' in the results.
o BUG FIX: callLOH(..., force=TRUE) would append multiple 'lohCall' 
  columns, if called multiple times.


Version: 0.25.0 [2012-04-20]
o Added a trial (very much true) version of segmentByNonPairedPSCBS().


Version: 0.24.0 [2012-04-20]